// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enroll-profile-with-password should add new field to view and remove it from the payload before submission 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="auth-container main-container MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="MuiScopedCssBaseline-root emotion-2"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="okta-sign-in-header auth-header MuiBox-root emotion-5"
            >
<<<<<<< HEAD
<<<<<<< HEAD
=======
>>>>>>> 2953fba96 (OKTA-588627: loginpage odyssey style (#3493))
              <h1
                class="MuiTypography-root MuiTypography-h1 emotion-6"
              />
            </div>
            <div
              class="MuiBox-root emotion-7"
            >
              <form
<<<<<<< HEAD
                aria-live="polite"
                class="o-form MuiBox-root emotion-8"
                data-se="o-form"
                novalidate=""
=======
              <div
                class="okta-sign-in-header auth-header MuiBox-root emotion-6"
>>>>>>> 90c119bc4 (added odyssey legacy alias package)
=======
                class="o-form MuiBox-root emotion-8"
                data-se="o-form"
                novalidate=""
>>>>>>> 2953fba96 (OKTA-588627: loginpage odyssey style (#3493))
              >
                <div
                  class="MuiBox-root emotion-9"
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <h2
                        class="MuiTypography-root MuiTypography-h4 emotion-12"
                        data-se="o-form-head"
                        id="enroll-profile_Title_Sign_up_1"
                        tabindex="-1"
                      >
                        Sign up
                      </h2>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-15"
                        data-se="o-form-explain"
                        id="enroll-profile_Description_Fields_are_required_unless_marked_optional_2"
                      >
                        Fields are required unless marked optional.
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-18"
                        data-shrink="false"
                        for="userProfile.lastName"
                      >
                        Last name
                        <span
                          aria-hidden="true"
                          class="no-translate MuiBox-root emotion-19"
                        >
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-20"
                      >
                        <input
                          aria-invalid="false"
                          autocomplete="family-name"
                          class="MuiInputBase-input emotion-21"
                          data-se="userProfile.lastName"
                          id="userProfile.lastName"
                          name="userProfile.lastName"
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-18"
                        data-shrink="false"
                        for="userProfile.firstName"
                      >
                        First name
                        <span
                          aria-hidden="true"
                          class="no-translate MuiBox-root emotion-19"
                        >
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-20"
                      >
                        <input
                          aria-invalid="false"
                          autocomplete="given-name"
                          class="MuiInputBase-input emotion-21"
                          data-se="userProfile.firstName"
                          id="userProfile.firstName"
                          name="userProfile.firstName"
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-18"
                        data-shrink="false"
                        for="userProfile.email"
                      >
                        Email
                        <span
                          aria-hidden="true"
                          class="no-translate MuiBox-root emotion-19"
                        >
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-20"
                      >
                        <input
                          aria-invalid="false"
                          autocomplete="email"
                          class="MuiInputBase-input emotion-21"
                          data-se="userProfile.email"
                          id="userProfile.email"
                          inputmode="email"
                          name="userProfile.email"
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-18"
                        data-shrink="false"
                        for="userProfile.login"
                      >
                        Username
                        <span
                          aria-hidden="true"
                          class="no-translate MuiBox-root emotion-19"
                        >
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-20"
                      >
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input emotion-21"
                          data-se="userProfile.login"
                          id="userProfile.login"
                          name="userProfile.login"
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-18"
                        data-shrink="false"
                        for="userProfile.address"
                      >
                        Street Address
                        <span
                          aria-hidden="true"
                          class="no-translate MuiBox-root emotion-19"
                        >
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-20"
                      >
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input emotion-21"
                          data-se="userProfile.address"
                          id="userProfile.address"
                          name="userProfile.address"
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-47"
                      data-type="save"
                      tabindex="0"
                      type="submit"
                    >
                      Sign Up
                    </button>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <hr
                      class="MuiDivider-root MuiDivider-fullWidth separation-line emotion-49"
                    />
                  </div>
                  <div
                    class="MuiBox-root emotion-50"
                  >
                    <div
                      class="MuiBox-root emotion-51"
                    >
                      <div
                        class="MuiBox-root emotion-11"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-15"
                          data-se="haveaccount"
                          id="enroll-profile_Description_Already_have_an_account_11"
                        >
                          Already have an account?
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-51"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-55"
                        data-se="back"
                        role="link"
                        type="button"
                      >
                        Sign In
                      </button>
                    </div>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`enroll-profile-with-password should show custom error message and prevent submission when failure is triggered in preSubmit callback 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="auth-container main-container MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="MuiScopedCssBaseline-root emotion-2"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="okta-sign-in-header auth-header MuiBox-root emotion-5"
            >
<<<<<<< HEAD
<<<<<<< HEAD
=======
>>>>>>> 2953fba96 (OKTA-588627: loginpage odyssey style (#3493))
              <h1
                class="MuiTypography-root MuiTypography-h1 emotion-6"
              />
            </div>
            <div
              class="MuiBox-root emotion-7"
            >
              <form
<<<<<<< HEAD
                aria-live="polite"
                class="o-form MuiBox-root emotion-8"
                data-se="o-form"
                novalidate=""
=======
              <div
                class="okta-sign-in-header auth-header MuiBox-root emotion-6"
>>>>>>> 90c119bc4 (added odyssey legacy alias package)
=======
                class="o-form MuiBox-root emotion-8"
                data-se="o-form"
                novalidate=""
>>>>>>> 2953fba96 (OKTA-588627: loginpage odyssey style (#3493))
              >
                <div
                  class="MuiBox-root emotion-9"
                >
                  <div
                    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-calloutError MuiAlert-callout emotion-10"
                    role="alert"
                  >
                    <div
                      class="MuiAlert-icon emotion-11"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-12"
                        fill="none"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M9.879 1.707a3 3 0 0 1 4.242 0l8.172 8.172a3 3 0 0 1 0 4.242l-8.172 8.172a3 3 0 0 1-4.242 0L1.707 14.12a3 3 0 0 1 0-4.242L9.88 1.707ZM12 13a1 1 0 0 1-1-1V7h2v5a1 1 0 0 1-1 1Zm0 1.75a1.25 1.25 0 1 0 0 2.5 1.25 1.25 0 0 0 0-2.5Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiAlert-message emotion-13"
                    >
                      <span
                        class="MuiBox-root emotion-14"
                        translate="yes"
                      >
                        error
                      </span>
                      <div
                        class="MuiBox-root emotion-1"
                      >
                        This is my custom global message
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-16"
                >
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <h2
                        class="MuiTypography-root MuiTypography-h4 emotion-19"
                        data-se="o-form-head"
                        id="enroll-profile_Title_Sign_up_1"
                        tabindex="-1"
                      >
                        Sign up
                      </h2>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-22"
                        data-se="o-form-explain"
                        id="enroll-profile_Description_Fields_are_required_unless_marked_optional_2"
                      >
                        Fields are required unless marked optional.
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-25"
                        data-shrink="false"
                        for="userProfile.lastName"
                      >
                        Last name
                        <span
                          aria-hidden="true"
                          class="no-translate MuiBox-root emotion-26"
                        >
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth emotion-27"
                      >
                        <input
                          aria-describedby=" userProfile.lastName-error  "
                          aria-invalid="true"
                          autocomplete="family-name"
                          class="MuiInputBase-input emotion-28"
                          data-se="userProfile.lastName"
                          id="userProfile.lastName"
                          name="userProfile.lastName"
                          type="text"
                        />
                      </div>
                      <div
                        class="MuiBox-root emotion-1"
                      >
                        <p
                          class="MuiFormHelperText-root Mui-error emotion-30"
                          data-se="userProfile.lastName-error"
                          id="userProfile.lastName-error"
                          role="alert"
                        >
                          Custom preSubmit error
                        </p>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-25"
                        data-shrink="false"
                        for="userProfile.firstName"
                      >
                        First name
                        <span
                          aria-hidden="true"
                          class="no-translate MuiBox-root emotion-26"
                        >
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-27"
                      >
                        <input
                          aria-invalid="false"
                          autocomplete="given-name"
                          class="MuiInputBase-input emotion-28"
                          data-se="userProfile.firstName"
                          id="userProfile.firstName"
                          name="userProfile.firstName"
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-25"
                        data-shrink="false"
                        for="userProfile.email"
                      >
                        Email
                        <span
                          aria-hidden="true"
                          class="no-translate MuiBox-root emotion-26"
                        >
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-27"
                      >
                        <input
                          aria-invalid="false"
                          autocomplete="email"
                          class="MuiInputBase-input emotion-28"
                          data-se="userProfile.email"
                          id="userProfile.email"
                          inputmode="email"
                          name="userProfile.email"
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-25"
                        data-shrink="false"
                        for="userProfile.login"
                      >
                        Username
                        <span
                          aria-hidden="true"
                          class="no-translate MuiBox-root emotion-26"
                        >
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-27"
                      >
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input emotion-28"
                          data-se="userProfile.login"
                          id="userProfile.login"
                          name="userProfile.login"
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-50"
                      data-type="save"
                      tabindex="0"
                      type="submit"
                    >
                      Sign Up
                    </button>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <hr
                      class="MuiDivider-root MuiDivider-fullWidth separation-line emotion-52"
                    />
                  </div>
                  <div
                    class="MuiBox-root emotion-53"
                  >
                    <div
                      class="MuiBox-root emotion-54"
                    >
                      <div
                        class="MuiBox-root emotion-18"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-22"
                          data-se="haveaccount"
                          id="enroll-profile_Description_Already_have_an_account_10"
                        >
                          Already have an account?
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-54"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-58"
                        data-se="back"
                        role="link"
                        type="button"
                      >
                        Sign In
                      </button>
                    </div>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`enroll-profile-with-password should show custom field level error message and custom global message on page load 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="auth-container main-container MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="MuiScopedCssBaseline-root emotion-2"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="okta-sign-in-header auth-header MuiBox-root emotion-5"
            >
<<<<<<< HEAD
<<<<<<< HEAD
=======
>>>>>>> 2953fba96 (OKTA-588627: loginpage odyssey style (#3493))
              <h1
                class="MuiTypography-root MuiTypography-h1 emotion-6"
              />
            </div>
            <div
              class="MuiBox-root emotion-7"
            >
              <form
<<<<<<< HEAD
                aria-live="polite"
                class="o-form MuiBox-root emotion-8"
                data-se="o-form"
                novalidate=""
=======
              <div
                class="okta-sign-in-header auth-header MuiBox-root emotion-6"
>>>>>>> 90c119bc4 (added odyssey legacy alias package)
=======
                class="o-form MuiBox-root emotion-8"
                data-se="o-form"
                novalidate=""
>>>>>>> 2953fba96 (OKTA-588627: loginpage odyssey style (#3493))
              >
                <div
                  class="MuiBox-root emotion-9"
                >
                  <div
                    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-calloutError MuiAlert-callout emotion-10"
                    role="alert"
                  >
                    <div
                      class="MuiAlert-icon emotion-11"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-12"
                        fill="none"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M9.879 1.707a3 3 0 0 1 4.242 0l8.172 8.172a3 3 0 0 1 0 4.242l-8.172 8.172a3 3 0 0 1-4.242 0L1.707 14.12a3 3 0 0 1 0-4.242L9.88 1.707ZM12 13a1 1 0 0 1-1-1V7h2v5a1 1 0 0 1-1 1Zm0 1.75a1.25 1.25 0 1 0 0 2.5 1.25 1.25 0 0 0 0-2.5Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiAlert-message emotion-13"
                    >
                      <span
                        class="MuiBox-root emotion-14"
                        translate="yes"
                      >
                        error
                      </span>
                      <div
                        class="MuiBox-root emotion-1"
                      >
                        This is my custom global message
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-16"
                >
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <h2
                        class="MuiTypography-root MuiTypography-h4 emotion-19"
                        data-se="o-form-head"
                        id="enroll-profile_Title_Sign_up_1"
                        tabindex="-1"
                      >
                        Sign up
                      </h2>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-22"
                        data-se="o-form-explain"
                        id="enroll-profile_Description_Fields_are_required_unless_marked_optional_2"
                      >
                        Fields are required unless marked optional.
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-25"
                        data-shrink="false"
                        for="userProfile.lastName"
                      >
                        Last name
                        <span
                          aria-hidden="true"
                          class="no-translate MuiBox-root emotion-26"
                        >
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth emotion-27"
                      >
                        <input
                          aria-describedby=" userProfile.lastName-error  "
                          aria-invalid="true"
                          autocomplete="family-name"
                          class="MuiInputBase-input emotion-28"
                          data-se="userProfile.lastName"
                          id="userProfile.lastName"
                          name="userProfile.lastName"
                          type="text"
                        />
                      </div>
                      <div
                        class="MuiBox-root emotion-1"
                      >
                        <p
                          class="MuiFormHelperText-root Mui-error emotion-30"
                          data-se="userProfile.lastName-error"
                          id="userProfile.lastName-error"
                          role="alert"
                        >
                          Custom parseSchema error
                        </p>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-25"
                        data-shrink="false"
                        for="userProfile.firstName"
                      >
                        First name
                        <span
                          aria-hidden="true"
                          class="no-translate MuiBox-root emotion-26"
                        >
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-27"
                      >
                        <input
                          aria-invalid="false"
                          autocomplete="given-name"
                          class="MuiInputBase-input emotion-28"
                          data-se="userProfile.firstName"
                          id="userProfile.firstName"
                          name="userProfile.firstName"
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-25"
                        data-shrink="false"
                        for="userProfile.email"
                      >
                        Email
                        <span
                          aria-hidden="true"
                          class="no-translate MuiBox-root emotion-26"
                        >
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-27"
                      >
                        <input
                          aria-invalid="false"
                          autocomplete="email"
                          class="MuiInputBase-input emotion-28"
                          data-se="userProfile.email"
                          id="userProfile.email"
                          inputmode="email"
                          name="userProfile.email"
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-25"
                        data-shrink="false"
                        for="userProfile.login"
                      >
                        Username
                        <span
                          aria-hidden="true"
                          class="no-translate MuiBox-root emotion-26"
                        >
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-27"
                      >
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input emotion-28"
                          data-se="userProfile.login"
                          id="userProfile.login"
                          name="userProfile.login"
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-50"
                      data-type="save"
                      tabindex="0"
                      type="submit"
                    >
                      Sign Up
                    </button>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <hr
                      class="MuiDivider-root MuiDivider-fullWidth separation-line emotion-52"
                    />
                  </div>
                  <div
                    class="MuiBox-root emotion-53"
                  >
                    <div
                      class="MuiBox-root emotion-54"
                    >
                      <div
                        class="MuiBox-root emotion-18"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-22"
                          data-se="haveaccount"
                          id="enroll-profile_Description_Already_have_an_account_10"
                        >
                          Already have an account?
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-54"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-58"
                        data-se="back"
                        role="link"
                        type="button"
                      >
                        Sign In
                      </button>
                    </div>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`enroll-profile-with-password should show generic error message and prevent updated view rendering when failure is triggered in postSubmit callback 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="auth-container main-container MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="MuiScopedCssBaseline-root emotion-2"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="okta-sign-in-header auth-header MuiBox-root emotion-5"
            >
<<<<<<< HEAD
<<<<<<< HEAD
=======
>>>>>>> 2953fba96 (OKTA-588627: loginpage odyssey style (#3493))
              <h1
                class="MuiTypography-root MuiTypography-h1 emotion-6"
              />
            </div>
            <div
              class="MuiBox-root emotion-7"
            >
              <form
<<<<<<< HEAD
                aria-live="polite"
                class="o-form MuiBox-root emotion-8"
                data-se="o-form"
                novalidate=""
=======
              <div
                class="okta-sign-in-header auth-header MuiBox-root emotion-6"
>>>>>>> 90c119bc4 (added odyssey legacy alias package)
=======
                class="o-form MuiBox-root emotion-8"
                data-se="o-form"
                novalidate=""
>>>>>>> 2953fba96 (OKTA-588627: loginpage odyssey style (#3493))
              >
                <div
                  class="MuiBox-root emotion-9"
                >
                  <div
                    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-calloutError MuiAlert-callout emotion-10"
                    role="alert"
                  >
                    <div
                      class="MuiAlert-icon emotion-11"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-12"
                        fill="none"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M9.879 1.707a3 3 0 0 1 4.242 0l8.172 8.172a3 3 0 0 1 0 4.242l-8.172 8.172a3 3 0 0 1-4.242 0L1.707 14.12a3 3 0 0 1 0-4.242L9.88 1.707ZM12 13a1 1 0 0 1-1-1V7h2v5a1 1 0 0 1-1 1Zm0 1.75a1.25 1.25 0 1 0 0 2.5 1.25 1.25 0 0 0 0-2.5Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiAlert-message emotion-13"
                    >
                      <span
                        class="MuiBox-root emotion-14"
                        translate="yes"
                      >
                        error
                      </span>
                      <div
                        class="MuiBox-root emotion-1"
                      >
                        We could not process your registration at this time. Please try again later.
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-16"
                >
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <h2
                        class="MuiTypography-root MuiTypography-h4 emotion-19"
                        data-se="o-form-head"
                        id="enroll-profile_Title_Sign_up_1"
                        tabindex="-1"
                      >
                        Sign up
                      </h2>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-22"
                        data-se="o-form-explain"
                        id="enroll-profile_Description_Fields_are_required_unless_marked_optional_2"
                      >
                        Fields are required unless marked optional.
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-25"
                        data-shrink="false"
                        for="userProfile.lastName"
                      >
                        Last name
                        <span
                          aria-hidden="true"
                          class="no-translate MuiBox-root emotion-26"
                        >
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-27"
                      >
                        <input
                          aria-invalid="false"
                          autocomplete="family-name"
                          class="MuiInputBase-input emotion-28"
                          data-se="userProfile.lastName"
                          id="userProfile.lastName"
                          name="userProfile.lastName"
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-25"
                        data-shrink="false"
                        for="userProfile.firstName"
                      >
                        First name
                        <span
                          aria-hidden="true"
                          class="no-translate MuiBox-root emotion-26"
                        >
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-27"
                      >
                        <input
                          aria-invalid="false"
                          autocomplete="given-name"
                          class="MuiInputBase-input emotion-28"
                          data-se="userProfile.firstName"
                          id="userProfile.firstName"
                          name="userProfile.firstName"
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-25"
                        data-shrink="false"
                        for="userProfile.email"
                      >
                        Email
                        <span
                          aria-hidden="true"
                          class="no-translate MuiBox-root emotion-26"
                        >
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-27"
                      >
                        <input
                          aria-invalid="false"
                          autocomplete="email"
                          class="MuiInputBase-input emotion-28"
                          data-se="userProfile.email"
                          id="userProfile.email"
                          inputmode="email"
                          name="userProfile.email"
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-25"
                        data-shrink="false"
                        for="userProfile.login"
                      >
                        Username
                        <span
                          aria-hidden="true"
                          class="no-translate MuiBox-root emotion-26"
                        >
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-27"
                      >
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input emotion-28"
                          data-se="userProfile.login"
                          id="userProfile.login"
                          name="userProfile.login"
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-48"
                      data-type="save"
                      tabindex="0"
                      type="submit"
                    >
                      Sign Up
                    </button>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <hr
                      class="MuiDivider-root MuiDivider-fullWidth separation-line emotion-50"
                    />
                  </div>
                  <div
                    class="MuiBox-root emotion-51"
                  >
                    <div
                      class="MuiBox-root emotion-52"
                    >
                      <div
                        class="MuiBox-root emotion-18"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-22"
                          data-se="haveaccount"
                          id="enroll-profile_Description_Already_have_an_account_10"
                        >
                          Already have an account?
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-52"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-56"
                        data-se="back"
                        role="link"
                        type="button"
                      >
                        Sign In
                      </button>
                    </div>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`enroll-profile-with-password should show validation error messages on all fields when submitted without completing required fields 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="auth-container main-container MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="MuiScopedCssBaseline-root emotion-2"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="okta-sign-in-header auth-header MuiBox-root emotion-5"
            >
<<<<<<< HEAD
<<<<<<< HEAD
=======
>>>>>>> 2953fba96 (OKTA-588627: loginpage odyssey style (#3493))
              <h1
                class="MuiTypography-root MuiTypography-h1 emotion-6"
              />
            </div>
            <div
              class="MuiBox-root emotion-7"
            >
              <form
<<<<<<< HEAD
                aria-live="polite"
                class="o-form MuiBox-root emotion-8"
                data-se="o-form"
                novalidate=""
=======
              <div
                class="okta-sign-in-header auth-header MuiBox-root emotion-6"
>>>>>>> 90c119bc4 (added odyssey legacy alias package)
=======
                class="o-form MuiBox-root emotion-8"
                data-se="o-form"
                novalidate=""
>>>>>>> 2953fba96 (OKTA-588627: loginpage odyssey style (#3493))
              >
                <div
                  class="MuiBox-root emotion-9"
                >
                  <div
                    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-calloutError MuiAlert-callout emotion-10"
                    role="alert"
                  >
                    <div
                      class="MuiAlert-icon emotion-11"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-12"
                        fill="none"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M9.879 1.707a3 3 0 0 1 4.242 0l8.172 8.172a3 3 0 0 1 0 4.242l-8.172 8.172a3 3 0 0 1-4.242 0L1.707 14.12a3 3 0 0 1 0-4.242L9.88 1.707ZM12 13a1 1 0 0 1-1-1V7h2v5a1 1 0 0 1-1 1Zm0 1.75a1.25 1.25 0 1 0 0 2.5 1.25 1.25 0 0 0 0-2.5Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiAlert-message emotion-13"
                    >
                      <span
                        class="MuiBox-root emotion-14"
                        translate="yes"
                      >
                        error
                      </span>
                      <div
                        class="MuiBox-root emotion-1"
                      >
                        We found some errors. Please review the form and make corrections.
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-16"
                >
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <h2
                        class="MuiTypography-root MuiTypography-h4 emotion-19"
                        data-se="o-form-head"
                        id="enroll-profile_Title_Sign_up_1"
                        tabindex="-1"
                      >
                        Sign up
                      </h2>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-22"
                        data-se="o-form-explain"
                        id="enroll-profile_Description_Fields_are_required_unless_marked_optional_2"
                      >
                        Fields are required unless marked optional.
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-25"
                        data-shrink="false"
                        for="userProfile.lastName"
                      >
                        Last name
                        <span
                          aria-hidden="true"
                          class="no-translate MuiBox-root emotion-26"
                        >
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth emotion-27"
                      >
                        <input
                          aria-describedby=" userProfile.lastName-error  "
                          aria-invalid="true"
                          autocomplete="family-name"
                          class="MuiInputBase-input emotion-28"
                          data-se="userProfile.lastName"
                          id="userProfile.lastName"
                          name="userProfile.lastName"
                          type="text"
                        />
                      </div>
                      <div
                        class="MuiBox-root emotion-1"
                      >
                        <p
                          class="MuiFormHelperText-root Mui-error emotion-30"
                          data-se="userProfile.lastName-error"
                          id="userProfile.lastName-error"
                          role="alert"
                        >
                          This field cannot be left blank
                        </p>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-25"
                        data-shrink="false"
                        for="userProfile.firstName"
                      >
                        First name
                        <span
                          aria-hidden="true"
                          class="no-translate MuiBox-root emotion-26"
                        >
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth emotion-27"
                      >
                        <input
                          aria-describedby=" userProfile.firstName-error  "
                          aria-invalid="true"
                          autocomplete="given-name"
                          class="MuiInputBase-input emotion-28"
                          data-se="userProfile.firstName"
                          id="userProfile.firstName"
                          name="userProfile.firstName"
                          type="text"
                        />
                      </div>
                      <div
                        class="MuiBox-root emotion-1"
                      >
                        <p
                          class="MuiFormHelperText-root Mui-error emotion-30"
                          data-se="userProfile.firstName-error"
                          id="userProfile.firstName-error"
                          role="alert"
                        >
                          This field cannot be left blank
                        </p>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-25"
                        data-shrink="false"
                        for="userProfile.email"
                      >
                        Email
                        <span
                          aria-hidden="true"
                          class="no-translate MuiBox-root emotion-26"
                        >
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth emotion-27"
                      >
                        <input
                          aria-describedby=" userProfile.email-error  "
                          aria-invalid="true"
                          autocomplete="email"
                          class="MuiInputBase-input emotion-28"
                          data-se="userProfile.email"
                          id="userProfile.email"
                          inputmode="email"
                          name="userProfile.email"
                          type="text"
                        />
                      </div>
                      <div
                        class="MuiBox-root emotion-1"
                      >
                        <p
                          class="MuiFormHelperText-root Mui-error emotion-30"
                          data-se="userProfile.email-error"
                          id="userProfile.email-error"
                          role="alert"
                        >
                          This field cannot be left blank
                        </p>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-25"
                        data-shrink="false"
                        for="userProfile.login"
                      >
                        Username
                        <span
                          aria-hidden="true"
                          class="no-translate MuiBox-root emotion-26"
                        >
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth emotion-27"
                      >
                        <input
                          aria-describedby=" userProfile.login-error  "
                          aria-invalid="true"
                          class="MuiInputBase-input emotion-28"
                          data-se="userProfile.login"
                          id="userProfile.login"
                          name="userProfile.login"
                          type="text"
                        />
                      </div>
                      <div
                        class="MuiBox-root emotion-1"
                      >
                        <p
                          class="MuiFormHelperText-root Mui-error emotion-30"
                          data-se="userProfile.login-error"
                          id="userProfile.login-error"
                          role="alert"
                        >
                          This field cannot be left blank
                        </p>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-1"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-25"
                        data-shrink="false"
                        for="userProfile.address"
                      >
                        Street Address
                        <span
                          aria-hidden="true"
                          class="no-translate MuiBox-root emotion-26"
                        >
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth emotion-27"
                      >
                        <input
                          aria-describedby=" userProfile.address-error  "
                          aria-invalid="true"
                          class="MuiInputBase-input emotion-28"
                          data-se="userProfile.address"
                          id="userProfile.address"
                          name="userProfile.address"
                          type="text"
                        />
                      </div>
                      <div
                        class="MuiBox-root emotion-1"
                      >
                        <p
                          class="MuiFormHelperText-root Mui-error emotion-30"
                          data-se="userProfile.address-error"
                          id="userProfile.address-error"
                          role="alert"
                        >
                          This field cannot be left blank
                        </p>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-64"
                      data-type="save"
                      tabindex="0"
                      type="submit"
                    >
                      Sign Up
                    </button>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <hr
                      class="MuiDivider-root MuiDivider-fullWidth separation-line emotion-66"
                    />
                  </div>
                  <div
                    class="MuiBox-root emotion-67"
                  >
                    <div
                      class="MuiBox-root emotion-68"
                    >
                      <div
                        class="MuiBox-root emotion-18"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-22"
                          data-se="haveaccount"
                          id="enroll-profile_Description_Already_have_an_account_11"
                        >
                          Already have an account?
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-68"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-72"
                        data-se="back"
                        role="link"
                        type="button"
                      >
                        Sign In
                      </button>
                    </div>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;
